@@ -48,7 +48,7 @@ public class verCore {
     /**
      * compile day
      */
-    public final static int day = 23;
+    public final static int day = 24;
 
     /**
      * statement of release
