@@ -1,1 +1,1 @@
-24.1.23
+24.1.24
